Princess: Apply error-prone patch